==================

o You can now drag a guide from the guide manager and drop it on the
  background of the main window to open a guide.

o You can now drag a bookmark from the bookmark window and drop it on the
  background of the main window to open a bookmark.

o You can now drag a hit from the global finder and drop it on the
  background of the main window to open the hit.

Changes since v2.7
==================

o Added physical information about a guide to the guide information dialog.

o The see also menu of a guide entry will, where possible, include any URLs
  found in the entry in the see-also menu. When you select such an item from
  the menu the URL will be passed to the operating system so that your URL
  handler of choice is used.

o Added a DDE server and implemented the "open" macro.

o Changed the file associations in the installer so that DDE is used. This
  means that a single instance of WEG can be used to handle open requests
  via file associations in Windows.

o Renamed the main "Edit" menu to "Options".

o Added a window recycling option to the global finder.

o Added a window recycling option to the guide manager.

o Added a window recycling option for opening guides file the file/open menu
  option.

o Added a window recycling option for opening guides file the file/reopen
  menu option.

o Added a window recycling option for opening guides via DDE.

o Added a window recycling option for opening guides via the command line.

o Added a window recycling option for opening guides via drag and drop.

o The entry find dialog now gives up focus to the guide window when a find
  option has happened.

Changes since v2.6
==================

o Built with Toolbar2000 v2.1.4.

o The compatibility keystroke for pulling up the guide information should
  have been "?", not "v". Changed.

o Made sure that any "&" in the title of a menu from a guide is escaped so
  as not to be confused with a Windows' menu accelerator key.
