@@ -1026,7 +1026,39 @@ Procedure TfrmMain.ExecuteExecuteMacro( Sender : TObject; Msg : TStrings );
       MessageBeep( MB_ICONERROR );
       MessageDlg( RSNoFileGiven, mtError, [ mbOk ], 0 );
     End;
-      
+
+  End;
+
+  Procedure DDESearch( slParams : TStringList );
+  ResourceString
+    RSNoSearchStringGiven = 'DDE Error:'#13#10#13#10'No search string given for "search" macro.';
+  Begin
+
+    If slParams.Count > 0 Then
+    Begin
+
+      // If there isn't a find in progress.
+      If Not frmGlobalFind.NGFind.Finding Then
+      Begin
+
+        // Ensure that the global finder is visible.
+        frmGlobalFind.show();
+
+        // Set the search string.
+        frmGlobalFind.cbSearchFor.Text := slParams[ 0 ];
+
+        // Start the search.
+        frmGlobalFind.actFindStartExecute( self );
+
+      End;
+
+    End
+    Else
+    Begin
+      MessageBeep( MB_ICONERROR );
+      MessageDlg( RSNoSearchStringGiven, mtError, [ mbOk ], 0 );
+    End;
+
   End;
   
 ResourceString
@@ -1057,7 +1089,9 @@ Begin
 
       // Act on the function.
       If sFunction = 'open' Then
-        DDEOpenFile( slCall );
+        DDEOpenFile( slCall )
+      Else If sFunction = 'search' Then
+        DDESearch( slCall );  
         
     Finally
       // Free the string list used for breaking up the call.
